--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -1,3 +1,5 @@
+{% csrf_token %}
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 mb-3">
@@ -61,19 +63,18 @@
             <div class="text-danger small">{{ form.costo_unitario.errors.0 }}</div>
         {% endif %}
         </div>
+    </div>
 
     <div class="row">
-        <div class="col-md-12 mb-3">
+        <div class="col-md-6 mb-3">
         <label for="{{ form.descripcion.id_for_label }}" class="form-label">Descripción</label>
         {{ form.descripcion }}
         {% if form.descripcion.errors %}
             <div class="text-danger small">{{ form.descripcion.errors.0 }}</div>
         {% endif %}
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12 mb-3">
+        <div class="col-md-6 mb-3">
         <label for="{{ form.nota.id_for_label }}" class="form-label">Nota</label>
         {{ form.nota }}
         {% if form.nota.errors %}
