--- a/inventario/templates/inventario/modales/modal_crear_producto.html
+++ b/inventario/templates/inventario/modales/modal_crear_producto.html
@@ -1,22 +1,32 @@
 <div class="modal-header">
     <h5 class="modal-title">Crear Producto</h5>
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <button 
+        type="button" 
+        class="close" 
+        data-dismiss="modal" 
+        aria-label="Cerrar">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <div class="modal-body">
-    <form id="form-producto" method="post" action="{% url 'inventario:crear_producto' %}">
+    <form id="form-producto"
+            method="post"
+            action="{% url 'inventario:crear_producto' %}">
         {% csrf_token %}
         <div id="producto-form-fields">
-        {% include 'inventario/modales/fragmento_form_producto.html' %}
+            {% include 'inventario/modales/fragmento_form_producto.html' %}
         </div>
         <div class="text-right mt-3">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+            <button type="submit" class="btn btn-primary">
+                Guardar
+            </button>
         </div>
     </form>
 </div>
 
 <script>
-    $(function() {
-        $('#form-producto').off('submit').on('submit', function(e) {
+$(function() {
+    $('#form-producto').off('submit').on('submit', function(e) {
         e.preventDefault();
         const form = $(this);
         $.ajax({
@@ -24,30 +34,24 @@
             url: form.attr('action'),
             data: form.serialize(),
             success: function(response) {
-            if (response.success) {
-                // Cerramos el modal de Crear Producto
-                $('#modalCrearProducto').modal('hide');
-                console.log('[modal_crear_producto] Producto creado. ID:', response.producto_id);
-
-                // Disparamos evento global “submitSuccess”
-            $(document).trigger('submitSuccess', {
-                producto_id:     response.producto_id,
-                producto_label:  response.producto_label,
-                producto_marca:  response.producto_marca,
-                producto_color:  response.producto_color,
-                producto_modelo: response.producto_modelo,
-                producto_serie:  response.producto_serie
-                });
-            } else {
-                // Si hay errores de validación: recargamos SOLO el fragmento con errores
-                $('#producto-form-fields').html(response.html_form);
-                console.log('[modal_crear_producto] Errores de validación, formulario recargado.');
-            }
+                if (response.success) {
+                    $('#modalCrearProducto').modal('hide');
+                    $(document).trigger('submitSuccess', {
+                        producto_id:     response.producto_id,
+                        producto_label:  response.producto_label,
+                        producto_marca:  response.producto_marca,
+                        producto_color:  response.producto_color,
+                        producto_modelo: response.producto_modelo,
+                        producto_serie:  response.producto_serie
+                    });
+                } else {
+                    $('#producto-form-fields').html(response.html_form);
+                }
             },
             error: function() {
-            alert('Error de red al crear producto. Intenta de nuevo.');
+                alert('Error de red al crear producto. Intenta de nuevo.');
             }
         });
-        });
     });
+});
 </script>
