--- a/inventario/templates/inventario/modales/modal_editar_producto.html
+++ b/inventario/templates/inventario/modales/modal_editar_producto.html
@@ -1,13 +1,19 @@
 <div class="modal-header">
     <h5 class="modal-title">Editar Producto</h5>
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <div class="modal-body">
-    <form id="form-editar-producto" method="post" action="{% url 'inventario:editar_producto' producto.id %}">
+    <form id="form-editar-producto"
+            method="post"
+            action="{% url 'inventario:editar_producto' producto.id %}">
         {% csrf_token %}
-        {% include 'inventario/modales/fragmento_form_producto.html' %}
+        <div id="producto-form-fields">
+            {% include 'inventario/modales/fragmento_form_producto.html' %}
+        </div>
         <div class="text-right mt-3">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+            <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
     </form>
 </div>
@@ -23,11 +29,9 @@ $(function() {
             data: form.serialize(),
             success: function(response) {
                 if (response.success) {
-                    // Cerrar modal y redirigir a la lista de productos
                     $('#modalEditarProducto').modal('hide');
                     window.location = response.redirect_url;
                 } else {
-                    // Recargar solo los campos con los errores
                     $('#producto-form-fields').html(response.html_form);
                 }
             },
@@ -38,4 +42,3 @@ $(function() {
     });
 });
 </script>
-
